welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: not found: value value
	while(n != 4 && value != nums(n)){
                        ^